assets/css/style.css
* {
  box-sizing: border-box;
  margin: 0;
	padding: 0;
}
   
body {
  /*teal body font */
  color: #39a6b2;
  font-family: Helvetica, Arial, sans-serif;
}


/*  HEADER / NAV BAR Starts  */
header {
  padding: 20px 35px;
  background-color: #39a6b2;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

header h1 {
  font-weight: bold;
  margin: 0;
	font-size: 36px;	
	color: #fce138;
}

header a {
	text-decoration: none;
	color: #fce138;
}

header nav {
	margin: 7px 0;
}
header nav ul {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  list-style: none;
}

header nav ul li a {
  padding: 10px 15px;
  font-weight: lighter;
  font-size: 1.55vw;
}
/*   Header Ends   */
/*   HEADER /NAVBAR Ends   */


/*   FOOTER Starts   */
footer {
  background: #fce138;
  padding: 40px 35px;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap; 
  width: 100%;
}
footer h2 {
  color: #024e76;
  font-size: 30px;
  margin: 0;
}
footer div {
  line-height: 1.5;
  text-align: right;
}
footer a {
  color: #024e76;
}
/*   FOOTER Ends   */


/* SECTION TAGS */
section {
  padding: 60px;
}


/*   HERO  Starts   */
.hero {
  background-image: url('../images/hero-bg.jpeg');
  background-size: cover;
  background-position: center;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  align-items: flex-start;
}

.hero-cta {
  width: 35%;
  text-align: right;
  margin: 3.5%;
  color: #fff;
  font-size: 18px;
  line-height: 1.2;
}

.hero-cta h2 {
color :#fce138;
font-style: italic;
font-size: 55px;
}

.hero-form {
	border: solid 3px #024e76;
	background-color:#fce138;
  padding:20px;
  width: 40%;
  margin: 3.5%;
	color: #024e76;
}
.hero-form h3 {
  font-size: 24px;
  margin: 0;
}
.hero-form p {
  margin: 5px 0 15px 0;
}
.form-input {
  border: 1px solid #024e76;
  display: block;
  padding: 7px 15px;
  font-size: 16px;
  color: #024e76;
  width: 100%;
  margin-bottom: 15px;
}
.hero-form label {
  margin: 0 5px;
}
.hero-form button {
  color: #fce138;
  background-color: #024e76;
  border: none;
  padding: 10px 10px;
  font-size: 16px;
}
/*   HERO Ends   */

/*  --------- WHAT WE DO  Starts ----  */
.intro p {
    line-height: 1.7;
    color: #39a6b2;
    width: 80%;
    font-size: 20px;
    margin: 0 auto;
    text-align: center;
}

/*  General Heading Styles Start  */
.section-title {
	font-size: 48px;
	color: #024e76;
	border-bottom: 3px solid;
  padding-bottom: 20px;
  text-align: center;
  margin: 0 auto 35px auto;
  width: 50%;
}
.primary-border {
	border-color: #fce138;
}
.secondary-border {
	border-color: #39a6b2;
}
/*  General Heading Styles End  */


/*  -------- What You DO-----------  */
.steps {
    background: #fce138
}

.step {
  margin: 50px auto;
  padding-bottom: 50px;
  width: 80%;
  border-bottom: 1px solid #39a6b2;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
}

.step h3 {
    color: #024e76;
    font-size: 46px;
    flex: 1 30%;
}

.step-img {
  flex: 1 12%;
  margin-right: 20px;
}

.step-img img {
  max-width: 100%;
}
.step-info {
  flex: 2 70%;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}

.step-text {
  flex: 12;  
}
.step-text p {
    color: #39a6b2;
    font-size: 18px;
}

.step-text h4 {
  font-size: 26px;
  line-height: 1.5;
  color: #024e76;
}
/*   WHAT YOU DO Ends   */


/* MEET THE TRAINERS Starts  */
.trainers {
  width: 100%;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}
.trainer {
    margin: 20px;
    background-color: #024e76;
    color: #fce138;
    flex: 1;
}
.trainer img {
    width: 100%;
}

.trainer-bio {
    padding: 25px;
    line-height: 1.3;
}
 
.trainer-bio h3 {
    font-size: 28px;
}

.trainer-bio h4 {
    font-weight: lighter;
    font-size: 22px;
    margin-bottom: 15px;   
}

.trainer-bio p {
    font-size: 17px;
}
/*   MEET THE TRAINERS Ends   */


/*   REACH OUT Starts  */
.contact {
	background: #024e76;
}
.contact h2 {
	color:#fce138;	
}
.contact-info {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}
.contact-info > * {
  flex: 1;
  margin: 15px;
}

.contact-infor iframe {
  height: 400px
}

.contact-info div {
	color: white;
}

.contact-info h3 {
  color:#fce138;
  font-size: 32px;
}

.contact-info p,
.contact-info address {
  margin: 20px 0;
	line-height: 1.5;
  font-size: 16px;
	font-style: normal;
}

.contact-info a {
	color:#fce138;
}

.contact-form input, .contact-form textarea {
  border: 1 px solid, #024e76;
  display: block;
  padding: 7px 15px;
  font-size: 16px;
  color: #024e76;
  width: 100%;
  margin-bottom: 15px;
  margin-top: 5px;
}

.contact-form button {
  width: 100%;
  border: none;
  background-color: #fce138;
  color: #024e76;
  text-align: center;
  padding: 15px;
  font-size: 16px;
}
/*   RAEACH OUT  Ends   */


/*    UTILITY RULES   */
.flex-row {
  display:flex;
}


/*     MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER   */
 
/* this will be applied on any screen smaller than 980px   */
    
@media screen and (max-width: 980px) {
   header {
     padding-bottom: 0;
     justify-content: center;
   }
   header h1 {
     width: 100%;
     text-align: center;
   }
    header nav ul {
     margin-top: 20px;
     width: 100%;
    justify-content: center;
   }
   header nav ul li a  {
     font-size: 20px;
   }
   footer h2, footer div {
     text-align: center;
     width: 100%;
   }
   .hero-cta, .hero-form {
     width: 100%;
   }  
   .hero-cta {
     text-align: center;
   }
   .section-title {
     width: 80%;
   }
   .trainer {
     flex: 0 70%;
   }
   .contact-info iframe {
     flex: 1 100%;
   }

}

/*  MEDIA QUERY FOR TBLETS AND SMALLER   768px */
  /* this will be applied on any screen between 768px and 575px*/

@media screen and (max-width: 768px) {
  section {
    padding: 30px 15px;
  }

  .step h3 {
    flex: 1 100%;
    text-align: center;
  }

  .step-info {
    flex: 2 100%;
    text-align: center;
    justify-content: center;
  }

  .step-img {
    flex: 0 32%;
    margin-right: 0;
    margin-top: 15px;
    margin-bottom: 15px;
  }

  .step-text {
    flex:100%;
  }
}

/*MEDIA QUERY FOR MBILE PHONES AND SMALLER */
  /*this will be applied on any screen smaller than 575px*/

@media screen and (max-width: 575px) {
  .hero-form button {
    width: 100%;
  }
    
  .section-title {
      width: 95%;
  }

  .intro p {
    width: 100%;
  }

  .trainer {
    flex: 0 100%;
  }

  .contact-info {
    text-align: center;
  }

  .contact-info > * {
    flex: 0 100%;
  }

}

